Resolved and issue where the slideshow was covering the quiz

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ header h1 {
 
 .carte h1 {
     color: black;
-    ;
     padding-left: 5px;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -137,6 +136,7 @@ svg {
     align-items: center;
 }
 
+
 .container {
     display: flex;
     align-items: center;
@@ -176,7 +176,6 @@ svg {
 
 .carouselContainer {
     display: grid;
-    height: 50vh;
     place-items: center;
 }
 
@@ -200,7 +199,7 @@ svg {
     padding: 0px;
     border: none;
     border-radius: 50%;
-    z-index: 10px;
+    z-index: 10;
     cursor: pointer;
     background-color: #fff;
     font-size: 18px;
